--- a/Desarrollo-Web.html
+++ b/Desarrollo-Web.html
@@ -61,14 +61,14 @@
             <h4><b>Title</b></h4>
             <div class="icons">
                 <div>
-                    <div class="iconos"><span><i class="fas fa-user-edit"></i></span></div>
+                    <div class="iconos"><span><i class="fab fa-html5" id="icono-html"></i></i></span></div>
                     <h6 id="html">Html</h6>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
                         itaque.</p>
                 </div>
 
                 <div>
-                    <div class="iconos"><span><i class="fas fa-chalkboard-teacher"></i>
+                    <div class="iconos"><span><i class="fab fa-css3-alt" id="icono-css"></i></i>
                         </span></div>
                     <h6 id="css">Css3</h6>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
@@ -76,238 +76,129 @@
                 </div>
 
                 <div>
-                    <div class="iconos"><span><i class="fas fa-headset"></i></span></div>
+                    <div class="iconos"><span><i class="fab fa-js" id="icono-javascript"></i></i></span></div>
                     <h6 id="javascript">JavaScript</h6>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt sed mollitia ea ut
                         itaque.</p>
                 </div>
 
             </div>
-            
+
         </div>
     </section>
-    <!-- SECCIONES -->
-    <section class="more-html">
-        <div class="html">
-            <h3><b>Html</b></h3>
+
+    <!-- SECCION DE CONTENIDO -->
+    <section id="secciones">
+        <div class="card">
+            <div class="slider" id="html_card">
+                <h3>HTML</h3>
+            </div>
+            <div class="contenido">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt labore modi quibusdam suscipit eaque
+                    saepe reprehenderit quis? Aliquam, quae illum fuga a, dignissimos explicabo quam earum voluptates,
+                    esse quibusdam magni.</p>
+
+            </div>
         </div>
-        <section id="tarjetas">
-            <div class="tarjetas" id="card1-html">
-                <img src="CSS/img/html.jpg" alt="IMAGEN">
-                <h2>LOREM IPSUM</h2>
-                <hr>
-                <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos aliquid
-                    optio </p>
-                <hr>
-                <p class="parrafo">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste tempora, dolor delectus omnis ut
-                    itaque, dignissimos fugiat porro dicta facilis aspernatur dolores. Repudiandae veniam necessitatibus
-                    at impedit illum, deleniti iste?
-                </p>
+        <div class="card" id="card-css">
+            <div class="slider" id="css_card">
+                <h3>Css3</h3>
             </div>
+            <div class="contenido">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt labore modi quibusdam suscipit eaque
+                    saepe reprehenderit quis? Aliquam, quae illum fuga a, dignissimos explicabo quam earum voluptates,
+                    esse quibusdam magni.</p>
 
-            <div class="tarjetas" id="card2-html">
-                <img src="CSS/img/html.jpg" alt="IMAGEN">
-                <h2>LOREM IPSUM</h2>
-                <hr>
-                <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos aliquid
-                    optio</p>
-                <hr>
-                <p class="parrafo">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt inventore voluptas quas dolorem
-                    atque aliquam tempora cum sit fugiat reprehenderit! Nulla quidem libero corrupti magni itaque dicta
-                    nihil voluptate inventore.
-                </p>
             </div>
+        </div>
+        <div class="card" id="card-java">
+            <div class="slider" id="java_card">
+                <h3>JavaScript</h3>
+            </div>
+            <div class="contenido">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt labore modi quibusdam suscipit eaque
+                    saepe reprehenderit quis? Aliquam, quae illum fuga a, dignissimos explicabo quam earum voluptates,
+                    esse quibusdam magni.</p>
 
-            <div class="tarjetas" id="card3-html">
-                <img src="CSS/img/html.jpg" alt="IMAGEN">
-                <h2>LOREM IPSUM</h2>
-                <hr>
-                <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos aliquid
-                    optio</p>
-                <hr>
-                <p class="parrafo">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus consequatur dolorem, a
-                    quos excepturi delectus labore sit ullam nesciunt assumenda atque nobis fugiat aliquid molestiae
-                    beatae dolor libero cupiditate.
-                </p>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="more-css">
-            <div class="css">
-                <h3><b>Css3</b></h3>
-            </div>
-            <section id="tarjetas">
-                <div class="tarjetas" id="card1-css">
-                    <img src="CSS/img/css.jpg" alt="IMAGEN">
-                    <h2>LOREM IPSUM</h2>
-                    <hr>
-                    <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos
-                        aliquid optio </p>
-                    <hr>
-                    <p class="parrafo">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste tempora, dolor delectus omnis ut
-                        itaque, dignissimos fugiat porro dicta facilis aspernatur dolores. Repudiandae veniam
-                        necessitatibus at impedit illum, deleniti iste?
+    <!--Pie de página-->
+    <footer>
+        <div class="container-footer-all">
+            <div class="container-body">
+                <div class="colum1">
+                    <h1>
+                        Información del grupo de trabajo
+                    </h1>
+                    <p>
+                        Somos un grupo de desarrolladores web interesados en compartir información sobre la tecnología
+                        en distintos
+                        ámbitos, te invitamos a ver nuestro contenido esperando con las mejores ganas de que lo
+                        disfrutes.
                     </p>
                 </div>
-
-                <div class="tarjetas" id="card2-css">
-                    <img src="CSS/img/css.jpg" alt="IMAGEN">
-                    <h2>LOREM IPSUM</h2>
-                    <hr>
-                    <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos
-                        aliquid optio</p>
-                    <hr>
-                    <p class="parrafo">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt inventore voluptas quas
-                        dolorem atque aliquam tempora cum sit fugiat reprehenderit! Nulla quidem libero corrupti magni
-                        itaque dicta nihil voluptate inventore.
-                    </p>
+                <div class="colum2">
+                    <h1>
+                        Redes Sociales
+                    </h1>
+                    <div class="row">
+                        <img src="Iconos/facebook.png">
+                        <label>
+                            Siguenos en Facebook
+                        </label>
+                    </div>
+                    <div class="row">
+                        <img src="Iconos/twitter.png">
+                        <label>
+                            Siguenos en Twitter
+                        </label>
+                    </div>
+                    <div class="row">
+                        <img src="Iconos/instagram.png">
+                        <label>
+                            Siguenos en Instagram
+                        </label>
+                    </div>
                 </div>
-
-                <div class="tarjetas" id="card3-css">
-                    <img src="CSS/img/css.jpg" alt="IMAGEN">
-                    <h2>LOREM IPSUM</h2>
-                    <hr>
-                    <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos
-                        aliquid optio</p>
-                    <hr>
-                    <p class="parrafo">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus consequatur dolorem, a
-                        quos excepturi delectus labore sit ullam nesciunt assumenda atque nobis fugiat aliquid molestiae
-                        beatae dolor libero cupiditate.
-                    </p>
+                <div class="colum3">
+                    <h1>
+                        Contáctanos
+                    </h1>
+                    <div class="row2">
+                        <img src="Iconos/house.png">
+                        <label>
+                            Perú, Lima.
+                        </label>
+                    </div>
+                    <div class="row2">
+                        <img src="Iconos/smartphone.png">
+                        <label>
+                            +51 987654321
+                        </label>
+                    </div>
+                    <div class="row2">
+                        <img src="Iconos/contact.png">
+                        <label>
+                            grupodevs@gmail.com
+                        </label>
+                    </div>
                 </div>
-            </section>
-
-
-            <section class="more-javascript">
-                <div class="javascript">
-                    <h3><b>JavaScript</b></h3>
-                </div>
-                <section id="tarjetas">
-                    <div class="tarjetas" id="card1-javascript">
-                        <img src="CSS/img/java.jpg" alt="IMAGEN">
-                        <h2>LOREM IPSUM</h2>
-                        <hr>
-                        <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos
-                            aliquid optio </p>
-                        <hr>
-                        <p class="parrafo">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste tempora, dolor delectus omnis
-                            ut itaque, dignissimos fugiat porro dicta facilis aspernatur dolores. Repudiandae veniam
-                            necessitatibus at impedit illum, deleniti iste?
-                        </p>
-                    </div>
-
-                    <div class="tarjetas" id="card2-javascript">
-                        <img src="CSS/img/java.jpg" alt="IMAGEN">
-                        <h2>LOREM IPSUM</h2>
-                        <hr>
-                        <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos
-                            aliquid optio</p>
-                        <hr>
-                        <p class="parrafo">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt inventore voluptas quas
-                            dolorem atque aliquam tempora cum sit fugiat reprehenderit! Nulla quidem libero corrupti
-                            magni itaque dicta nihil voluptate inventore.
-                        </p>
-                    </div>
-
-                    <div class="tarjetas" id="card3-javascript">
-                        <img src="CSS/img/java.jpg" alt="IMAGEN">
-                        <h2>LOREM IPSUM</h2>
-                        <hr>
-                        <p class="carreras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos
-                            aliquid optio</p>
-                        <hr>
-                        <p class="parrafo">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus consequatur
-                            dolorem, a quos excepturi delectus labore sit ullam nesciunt assumenda atque nobis fugiat
-                            aliquid molestiae beatae dolor libero cupiditate.
-                        </p>
-                    </div>
-                </section>
-                <!--Pie de página-->
-                <footer>
-                    <div class="container-footer-all">
-                        <div class="container-body">
-                            <div class="colum1">
-                                <h1>
-                                    Información del grupo de trabajo
-                                </h1>
-                                <p>
-                                    Somos un grupo de desarrolladores web interesados en compartir información sobre la
-                                    tecnología
-                                    en distintos
-                                    ámbitos, te invitamos a ver nuestro contenido esperando con las mejores ganas de que
-                                    lo
-                                    disfrutes.
-                                </p>
-                            </div>
-                            <div class="colum2">
-                                <h1>
-                                    Redes Sociales
-                                </h1>
-                                <div class="row">
-                                    <img src="Iconos/facebook.png">
-                                    <label>
-                                        Siguenos en Facebook
-                                    </label>
-                                </div>
-                                <div class="row">
-                                    <img src="Iconos/twitter.png">
-                                    <label>
-                                        Siguenos en Twitter
-                                    </label>
-                                </div>
-                                <div class="row">
-                                    <img src="Iconos/instagram.png">
-                                    <label>
-                                        Siguenos en Instagram
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="colum3">
-                                <h1>
-                                    Contáctanos
-                                </h1>
-                                <div class="row2">
-                                    <img src="Iconos/house.png">
-                                    <label>
-                                        Perú, Lima.
-                                    </label>
-                                </div>
-                                <div class="row2">
-                                    <img src="Iconos/smartphone.png">
-                                    <label>
-                                        +51 987654321
-                                    </label>
-                                </div>
-                                <div class="row2">
-                                    <img src="Iconos/contact.png">
-                                    <label>
-                                        grupodevs@gmail.com
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container-footer">
-                        <div class="copyright">© 2021 Todos los Derechos Reservados</div>
-                    </div>
-                </footer>
+            </div>
+        </div>
+        <div class="container-footer">
+            <div class="copyright">© 2021 Todos los Derechos Reservados</div>
+        </div>
+    </footer>
 
 
 
 
-                <!-- SCRIPTS-->
-                <script src="scripts.js"></script>
-                <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-                <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="icono"></script>
+    <!-- SCRIPTS-->
+    <script src="scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="icono"></script>
 </body>
 
 </html>
